--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -35,15 +35,14 @@ header {
   height: 2rem;
   background: var(--color-primary);
 }
-/*======= SOCIALS ======*/
+/*======= ME ======*/
 
 .me {
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
   height: 30rem;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  left: calc(50% - 11rem);
   margin-top: 4rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
