--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -25,8 +25,8 @@
 }
 
 .portfolio__item-cta {
-  display: flex;
-  gap: 1rem;
+  /* display: flex;
+  gap: 1rem; */
   margin-bottom: 1rem;
 }
 /*========MEDIA QUERIES(MEDIUM DEVICES)=====*/
