--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -28,7 +28,7 @@
 }
 .about__cards {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   gap: 1.5rem;
 }
 .about__card {
@@ -92,7 +92,7 @@
   }
 
   .about__cards {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 1rem;
   }
   .about__content {
